# ami-music

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: cache.rs  lib.rs
core/src/config/: mod.rs
core/src/player/: mod.rs  pause_reason.rs  playback_snapshot.rs  playback_status.rs  tests.rs
core/src/player/mpris/: player_interface.rs
core/src/queue/: loop_mode.rs  mod.rs  tests.rs
core/src/track/: metadata.rs  mod.rs  properties.rs
daemon/: Cargo.toml
daemon/src/: app.rs  clap.rs  command_handler.rs  commands.rs  daemon_process.rs  events.rs  internal_events.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  states.rs  websockets.rs
daemon/src/services/: mod.rs
daemon/src/services/mpris/: mod.rs  player_interface.rs  root_interface.rs
firefly_core/: Cargo.toml
firefly_core/src/player/: mod.rs
firefly_core/src/player/mpris/: root_interface.rs
firefly_core/src/queue/: mod.rs
snowy_core/: Cargo.toml
snowy_core/src/: lib.rs
snowy_core/src/orchestrator/: mod.rs
snowy_core/src/player/: mod.rs  playback_snapshot.rs  tests.rs
snowy_core/src/queue/: mod.rs  tests.rs
snowy_core/src/track/: metadata.rs  mod.rs
snowy_daemon/: Cargo.toml
snowy_daemon/src/: commands.rs  events.rs  internal_events.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  sockets.rs  state.rs  states.rs
snowy_daemon/src/handler/: mod.rs  queue.rs
tui/: Cargo.toml
tui/src/: app.rs  event.rs  main.rs  state.rs  ui.rs
tui/src/ui/: cover_art.rs  library.rs  mod.rs  now_playing.rs  queue.rs
tui_client/: Cargo.toml
tui_client/src/: main.rs
web-ui/: README.md  package.json  pnpm-lock.yaml
web_ui/: README.md  package.json  pnpm-lock.yaml
