[package]
name = "ami_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
image = "0.25.10"
lofty = "0.22.4"
log = "0.4.29"
rand = "0.10.0"
rayon = "1.12.0"
rodio = { git = "https://github.com/RustAudio/rodio.git", features = ["symphonia-libopus"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.2"
ts-rs = "12.0.1"
walkdir = "2.5.0"
