[package]
name = "ami_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.29"
mpris-server = "0.9.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
ami_core = { path = "../core" }
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = "0.29.0"
rodio = { git = "https://github.com/RustAudio/rodio.git", features = ["symphonia-libopus"] }
fern = "0.7.1"
humantime = "2.3.0"
url = { version = "2.5.8", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["fs"] }
