[package]
name = "snowy_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
lofty = "0.22.4"
mpris-server = "0.9.0"
rand = "0.10.0"
rodio = { git = "https://github.com/RustAudio/rodio.git", features = ["symphonia-libopus"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["sync"] }
toml = "1.1.2"
