[package]
name = "ami_term"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
fern = "0.7.1"
futures-util = "0.3.32"
humantime = "2.3.0"
log = "0.4.29"
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
ami_daemon = { path = "../daemon" }
ami_core = { path = "../core" }
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
url = { version = "2.5.8", features = ["serde"] }
ratatui-image = "11.0.2"
image = "0.25.10"
lofty = "0.24.0"
reqwest = "0.13.2"
